; ModuleID = '/home/carl/AnghaBench/linux/drivers/infiniband/sw/rdmavt/extr_mr.c_rvt_mr_exit.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/infiniband/sw/rdmavt/extr_mr.c_rvt_mr_exit.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.rvt_dev_info = type { %struct.TYPE_2__, i64 }
%struct.TYPE_2__ = type { i32 }

@.str = private unnamed_addr constant [18 x i8] c"DMA MR not null!\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @rvt_mr_exit(%struct.rvt_dev_info* %0) #0 {
  %2 = alloca %struct.rvt_dev_info*, align 8
  store %struct.rvt_dev_info* %0, %struct.rvt_dev_info** %2, align 8
  %3 = load %struct.rvt_dev_info*, %struct.rvt_dev_info** %2, align 8
  %4 = getelementptr inbounds %struct.rvt_dev_info, %struct.rvt_dev_info* %3, i32 0, i32 1
  %5 = load i64, i64* %4, align 8
  %6 = icmp ne i64 %5, 0
  br i1 %6, label %7, label %10

7:                                                ; preds = %1
  %8 = load %struct.rvt_dev_info*, %struct.rvt_dev_info** %2, align 8
  %9 = call i32 @rvt_pr_err(%struct.rvt_dev_info* %8, i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str, i64 0, i64 0))
  br label %10

10:                                               ; preds = %7, %1
  %11 = load %struct.rvt_dev_info*, %struct.rvt_dev_info** %2, align 8
  %12 = getelementptr inbounds %struct.rvt_dev_info, %struct.rvt_dev_info* %11, i32 0, i32 0
  %13 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 8
  %15 = call i32 @vfree(i32 %14)
  ret void
}

declare dso_local i32 @rvt_pr_err(%struct.rvt_dev_info*, i8*) #1

declare dso_local i32 @vfree(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
